--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "dompurify": "^3.1.3",
     "gapi-script": "^1.2.0",
+    "google-auth-library": "^9.13.0",
     "googleapis": "^137.1.0",
     "md5": "^2.3.0",
     "react": "^18.3.1",
@@ -28,8 +29,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-timezone-select": "^3.2.7",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
